--- a/index.html
+++ b/index.html
@@ -2,13 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Alexithymia</title>
+    <title>AAN: The Alexithymia Awareness Network</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h1>Alexithymia? Exactly.</h1>
-    <p>If you've never heard of Alexithymia, you're in good company. The condition, originally described by Peter Sifneos in 1973, is characterized by a difficulty in identifying and describing emotions.
-        AAN exists to educate the public about Alexithymia and to provide resources for those who may be affected by it.
-    </p>
+
+    <div>
+        <h1>Alexithymia? Exactly.</h1>
+        <p>If you've never heard of Alexithymia, you're in good company. The condition, originally described by Peter Sifneos in 1973, is characterized by a difficulty in identifying and describing emotions.
+            AAN exists to educate the public about Alexithymia and to provide resources for those who may be affected by it.
+        </p>
+    </div>
+
+    <div>
+        <h2>Education</h2>
+        <p>
+            <ul>
+                <li><a href="intro.html">Introduction to Alexithymia</a></li>
+                <li><a href="news.html">Alexithymia news</a></li>
+            </ul>
+        </p>
+    </div>
+
+    <div>
+        <h2>Networking</h2>
+        <p>
+            <ul>
+                <li><a href="network.html">The Alexithymia Awareness Network</a></li>
+                <li><a href="directory.html">The AAN Directory</a></li>
+            </ul>
+        </p>
+    </div>
+
+    <div>
+        <h2>Resources</h2>
+        <p>
+            <ul>
+                <li><a href="resources.html">Articles, Papers, Books, and Media</a></li>
+                <li><a href="professionals.html">Finding professionals</a></li>
+                <li><a href="lexicon.html">Words for feelings</a></li>
+            </ul>
+        </p>
+    </div>
+
+    <div>
+        <h2>Mission</h2>
+        <p>
+            <ul>
+                <li><a href="mission.html">Our mission</a></li>
+                <li><a href="advisors.html">Our advisory board</a></li>
+                <li><a href="contact.html">Contact AAN</a></li>
+            </ul>
+        </p>
+    </div>
+
     </body>
 </html>
