Fix navigation links in root index.html to point to MkDocs site structure

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h2>Education</h2>
         <p>
             <ul>
-                <li><a href="intro.html">Introduction to Alexithymia</a></li>
-                <li><a href="news.html">Alexithymia news</a></li>
+                <li><a href="aan/site/intro/">Introduction to Alexithymia</a></li>
+                <li><a href="aan/site/news/">Alexithymia news</a></li>
             </ul>
         </p>
     </div>
@@ -28,8 +28,8 @@
         <h2>Networking</h2>
         <p>
             <ul>
-                <li><a href="network.html">The Alexithymia Awareness Network</a></li>
-                <li><a href="directory.html">The AAN Directory</a></li>
+                <li><a href="aan/site/network/">The Alexithymia Awareness Network</a></li>
+                <li><a href="#" onclick="alert('Directory page coming soon!')">The AAN Directory</a></li>
             </ul>
         </p>
     </div>
@@ -38,9 +38,9 @@
         <h2>Resources</h2>
         <p>
             <ul>
-                <li><a href="resources.html">Articles, Papers, Books, and Media</a></li>
-                <li><a href="professionals.html">Finding professionals</a></li>
-                <li><a href="lexicon.html">Words for feelings</a></li>
+                <li><a href="aan/site/resources/">Articles, Papers, Books, and Media</a></li>
+                <li><a href="#" onclick="alert('Professionals page coming soon!')">Finding professionals</a></li>
+                <li><a href="aan/site/lexicon/">Words for feelings</a></li>
             </ul>
         </p>
     </div>
@@ -49,9 +49,9 @@
         <h2>Mission</h2>
         <p>
             <ul>
-                <li><a href="mission.html">Our mission</a></li>
-                <li><a href="advisors.html">Our advisory board</a></li>
-                <li><a href="contact.html">Contact AAN</a></li>
+                <li><a href="aan/site/mission/">Our mission</a></li>
+                <li><a href="aan/site/advisors/">Our advisory board</a></li>
+                <li><a href="aan/site/contact/">Contact AAN</a></li>
             </ul>
         </p>
     </div>
