--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h2>Education</h2>
         <p>
             <ul>
-                <li><a href="aan/site/intro/">Introduction to Alexithymia</a></li>
-                <li><a href="aan/site/news/">Alexithymia news</a></li>
+                <li><a href="docs/intro/">Introduction to Alexithymia</a></li>
+                <li><a href="docs/news/">Alexithymia news</a></li>
             </ul>
         </p>
     </div>
@@ -28,7 +28,7 @@
         <h2>Networking</h2>
         <p>
             <ul>
-                <li><a href="aan/site/network/">The Alexithymia Awareness Network</a></li>
+                <li><a href="docs/network/">The Alexithymia Awareness Network</a></li>
                 <li><a href="#" onclick="alert('Directory page coming soon!')">The AAN Directory</a></li>
             </ul>
         </p>
@@ -38,9 +38,9 @@
         <h2>Resources</h2>
         <p>
             <ul>
-                <li><a href="aan/site/resources/">Articles, Papers, Books, and Media</a></li>
+                <li><a href="docs/resources/">Articles, Papers, Books, and Media</a></li>
                 <li><a href="#" onclick="alert('Professionals page coming soon!')">Finding professionals</a></li>
-                <li><a href="aan/site/lexicon/">Words for feelings</a></li>
+                <li><a href="docs/lexicon/">Words for feelings</a></li>
             </ul>
         </p>
     </div>
@@ -49,9 +49,9 @@
         <h2>Mission</h2>
         <p>
             <ul>
-                <li><a href="aan/site/mission/">Our mission</a></li>
-                <li><a href="aan/site/advisors/">Our advisory board</a></li>
-                <li><a href="aan/site/contact/">Contact AAN</a></li>
+                <li><a href="docs/mission/">Our mission</a></li>
+                <li><a href="docs/advisors/">Our advisory board</a></li>
+                <li><a href="docs/contact/">Contact AAN</a></li>
             </ul>
         </p>
     </div>
